# agenteval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_evaluator.yml
.github/workflows/: ci.yml  release.yml
docs/: demo.tape  demo_sim.sh  mkdocs.yml
docs/docs/: index.md  quickstart.md
docs/docs/guides/: ci-cd.md  custom-evaluators.md  local-evals.md  production-failures.md  providers.md
docs/docs/reference/: cli.md  evaluators.md  interceptors.md
examples/bedrock_agent/: agent.py  conftest.py  test_bedrock_agent.py
examples/langchain_agent/: agent.py  conftest.py  test_langchain_agent.py
examples/ollama_local/: agent.py  conftest.py  test_ollama_agent.py
examples/openai_agent/: agent.py  conftest.py  test_openai_agent.py
examples/quickstart/: conftest.py  test_hello.py
src/agenteval/: __init__.py
src/agenteval/cli/: main.py  scaffold.py
src/agenteval/core/: config.py  eval_model.py  models.py  runner.py
src/agenteval/evaluators/: __init__.py  base.py  context_utilization.py  convergence.py  cost.py  guardrail.py  hallucination.py  latency.py  llm_judge.py  loop_detector.py  output_structure.py  regression.py  security.py  similarity.py  tool_call.py
src/agenteval/interceptors/: __init__.py  anthropic.py  base.py  bedrock.py  openai.py  pricing.py
src/agenteval/interceptors/data/: pricing.json
src/agenteval/mcp/: installer.py  server.py
src/agenteval/providers/: __init__.py  base.py  bedrock.py  ollama.py  openai.py
src/agenteval/pytest_plugin/: _collector.py  assertions.py  fixtures.py  plugin.py
src/agenteval/reporting/: __init__.py  base.py  console.py  html.py  json.py
src/agenteval/skill/: installer.py
src/agenteval/skill/adapters/: claude_code.py  copilot.py  cursor.py  (+1 more)
tests/agent_evals/: conftest.py  test_example.py
tests/unit/: test_anthropic_interceptor.py  test_assertions.py  test_bedrock_interceptor.py  test_cli.py  test_config.py  test_context_utilization_evaluator.py  test_convergence_evaluator.py  test_cost_evaluator.py  test_eval_model.py  test_eval_providers.py  test_evaluator_base.py  test_guardrail_evaluator.py  test_hallucination_evaluator.py  test_interceptor_base.py  test_latency_evaluator.py  test_llm_judge.py  test_loop_detector.py  test_mcp_installer.py  test_mcp_server.py  test_models.py  test_openai_interceptor.py  test_output_structure_evaluator.py  test_pricing.py  test_pytest_plugin.py  test_regression_evaluator.py  test_reporting.py  test_runner.py  test_scaffold.py  test_security_evaluator.py  test_similarity_evaluator.py  test_skill_installer.py  test_tool_call_evaluator.py
(+6 files in other folders)
